# flasknova

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  VISION.md  example_crud.http  form.http  pyproject.toml  requirements.txt  serialize.http
.github/workflows/: publish.yml
docs/: index.html
example/: auth_example.py  config_.py  example_app.py  example_crud.py  security_auth.py  serialize_api.py
examples/: __init__.py  form_ex.py
flasknova/: __init__.py  core.py  exceptions.py  logger.py  openapi.py  status.py  swagger.py
src/flask_nova/: __init__.py  cli.py  config.py  core.py  d_injection.py  di.py  exceptions.py  logger.py  multi_part.py  openapi.py  responses.py  route_refactor.py  router.py  status.py  swagger.py  types.py  utils.py
src/flask_nova/docs/: docs.py  openapi.py
src/flask_nova/scripts/: typecheck.py
src/spa/: README.md  __init__.py  _nova_egine.py  _nova_engine.py
tests/: conftest.py  test_cli.py  test_multipart.py  test_route.py  test_spa.py
