[project]
name = "flask-nova"
version = "0.1.3"
description = "Extra check using pydandic in flask application"
authors = [
    {name = "manitreasure1",  email = "manitreasure1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask[async]>=3.1.1,<4.0.0",
    "pydantic>=2.11.7,<3.0.0",
]
[project.scripts]
flask-nova = "flask_nova.cli:cli"


[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
source = ["src"]
packages = ["src/flask_nova", "src/spa"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

